--- a/docs/rtk-query/api/setupListeners.mdx
+++ b/docs/rtk-query/api/setupListeners.mdx
@@ -10,7 +10,7 @@ hide_table_of_contents: false
 
 # `setupListeners`
 
-A utility used to enable `refetchOnMount` and `refetchOnReconnect` behaviors. It requires the `dispatch` method from your store. Calling `setupListeners(store.dispatch)` will configure listeners with the recommended defaults, but you have the option of providing a callback for more granular control.
+A utility used to enable `refetchOnFocus` and `refetchOnReconnect` behaviors. It requires the `dispatch` method from your store. Calling `setupListeners(store.dispatch)` will configure listeners with the recommended defaults, but you have the option of providing a callback for more granular control.
 
 ```ts title="setupListeners default configuration" no-transpile
 let initialized = false
