--- a/docs/rtk-query/usage/automated-refetching.mdx
+++ b/docs/rtk-query/usage/automated-refetching.mdx
@@ -797,7 +797,7 @@ const api = createApi({
   tagTypes: ['Post', 'UNAUTHORIZED', 'UNKNOWN_ERROR'],
   endpoints: (build) => ({
     postById: build.query<Post, number>({
-      query: (id) => `post/${id}`,
+      query: (id) => `posts/${id}`,
       providesTags: (result, error, id) =>
         result
           ? [{ type: 'Post', id }]
