--- a/docs/rtk-query/usage/optimistic-updates.mdx
+++ b/docs/rtk-query/usage/optimistic-updates.mdx
@@ -35,12 +35,12 @@ const api = createApi({
   tagTypes: ['Post'],
   endpoints: (build) => ({
     getPost: build.query<Post, number>({
-      query: (id) => `posts/${id}`,
+      query: (id) => `post/${id}`,
       providesTags: ['Post'],
     }),
     updatePost: build.mutation<void, Pick<Post, 'id'> & Partial<Post>>({
       query: ({ id, ...patch }) => ({
-        url: `posts/${id}`,
+        url: `post/${id}`,
         method: 'PATCH',
         body: patch,
       }),
