--- a/docs/rtk-query/api/createApi.mdx
+++ b/docs/rtk-query/api/createApi.mdx
@@ -506,17 +506,17 @@ const api = createApi({
   }),
   endpoints: (build) => ({
     getPost: build.query<Post, number>({
-      query: (id) => `posts/${id}`,
+      query: (id) => `post/${id}`,
       async onQueryStarted(id, { dispatch, queryFulfilled }) {
         // `onStart` side-effect
-        dispatch(messageCreated('Fetching posts...'))
+        dispatch(messageCreated('Fetching post...'))
         try {
           const { data } = await queryFulfilled
           // `onSuccess` side-effect
-          dispatch(messageCreated('Posts received!'))
+          dispatch(messageCreated('Post received!'))
         } catch (err) {
           // `onError` side-effect
-          dispatch(messageCreated('Error fetching posts!'))
+          dispatch(messageCreated('Error fetching post!'))
         }
       },
     }),
