--- a/docs/rtk-query/usage/customizing-queries.mdx
+++ b/docs/rtk-query/usage/customizing-queries.mdx
@@ -427,7 +427,7 @@ export const api = createApi({
       query: () => ({ url: 'posts' }),
     }),
     getPost: build.query<PostsResponse, string>({
-      query: (id) => ({ url: `posts/${id}` }),
+      query: (id) => ({ url: `post/${id}` }),
       extraOptions: { maxRetries: 8 }, // You can override the retry behavior on each endpoint
     }),
   }),
