examples and docs working again

--- a/docs/api/createSlice.mdx
+++ b/docs/api/createSlice.mdx
@@ -107,7 +107,7 @@ If you need to customize the creation of the payload value of an action creator 
 
 ```ts
 import { createSlice, PayloadAction } from '@reduxjs/toolkit'
-import nanoid from 'nanoid'
+import { nanoid } from 'nanoid'
 
 interface Item {
   id: string
