--- a/docs/rtk-query/usage/conditional-fetching.mdx
+++ b/docs/rtk-query/usage/conditional-fetching.mdx
@@ -19,10 +19,10 @@ If you want to prevent a query from automatically running, you can use the `skip
 Typescript users may wish to use [`skipToken`](../api/created-api/hooks.mdx#skiptoken) as an alternative to the `skip` option in order to skip running a query, while still keeping types for the endpoint accurate.
 :::
 
-### Example
+## Conditional Fetching Example
 
 <iframe
-  src="https://codesandbox.io/embed/github/reduxjs/redux-toolkit/tree/feature/v1.6-integration/examples/query/react/conditional-fetching?fontsize=12&hidenavigation=1&module=%2Fsrc%2FPokemon.tsx&moduleview=1&theme=dark"
+  src="https://codesandbox.io/embed/github/reduxjs/redux-toolkit/tree/feature/v1.6-integration/examples/query/react/conditional-fetching?fontsize=12&runonclick=1&hidenavigation=1&module=%2Fsrc%2FPokemon.tsx&moduleview=1&theme=dark"
   style={{
     width: '100%',
     height: '600px',
