--- a/docs/rtk-query/usage/usage-without-react-hooks.mdx
+++ b/docs/rtk-query/usage/usage-without-react-hooks.mdx
@@ -79,7 +79,7 @@ Examples of usage without React hooks can be found under the following:
 - The below `Cache Lifetime Subscription Class Component` example:
 
 <iframe
-  src="https://codesandbox.io/embed/rtk-query-cache-lifetime-subscription-class-component-example-38mgd?fontsize=12&hidenavigation=1&module=%2Fsrc%2Fcomponents%2FUsersList.tsx&theme=dark&runonclick=1"
+  src="https://codesandbox.io/embed/rtk-query-cache-lifetime-subscription-class-component-example-38mgd?fontsize=12&runonclick=1&hidenavigation=1&module=%2Fsrc%2Fcomponents%2FUsersList.tsx&theme=dark&runonclick=1"
   style={{
     width: '100%',
     height: '800px',
